# tree-sitter-arktype

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  arktype.scratch.ts  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-arktype.pc.in
bindings/c/tree_sitter/: tree-sitter-arktype.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_arktype/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterArktypeTests/: TreeSitterArktypeTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: primitives_and_unions.txt
